# TermTrain

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.c
src/core/: EntityHandler.c  EntityHandler.h  ansi.c  ansi.h  common.h  core.c  core.h  game.c  game.h  input.c  input.h  math.h  time.c  time.h
